# Simple-Login-Websocket-API

./: CMakeLists.txt  Dockerfile  main.cpp  readme.md  task_mollybet.cpp  websocket_result.json
src/: main.cpp
